export default class HomePageConstants {
    static readonly USER_ICON = "User Icon";
    static readonly USER_NAME = "User Name";
    static readonly PASSWORD = "Password";
    static readonly REMEMBER_ME_CHECKBOX = "Remember Me";
    static readonly SIGN_IN_BUTTON = "Log in Button";
    static readonly SIGN_IN_ERROR_MESSAGE = "Error Message";
    static readonly SIGN_OUT_LINK = "Logout Link";
    static readonly LOGIN_AS_ROLE = "Login As Role";
    static readonly TENANT_DROPDOWN = "Select Tenant Dropdown";
    static readonly TENANT_OPTION = "Tenant Option";
    static readonly PROFILE_MENU = "Profile Menu";
    static readonly HOME_PAGE = "Home Page";
    static readonly CREATE_NEW_ACCOUNT_LINK = "Create New Account Link";
    static readonly CATEGORY_DROPDOWN = "Category Dropdown";
    static readonly PRODUCT_DROPDOWN = "Product Dropdown";
    static readonly SUBJECT_TEXTAREA = "ContactUs Subject";
    static readonly EMAIL_TEXTBOX = "ContactUs email";
    static readonly SEND_BUTTON = "Send Button";
    static readonly CONTACT_US_MESSAGE = "ContactUs Success Message";
    static readonly SEARCH_ICON = "Search Icon";
    static readonly SEARCH_TEXTBOX = "Search Box";
    static readonly SEARCH_CLOSE_IMAGE = "Close Search";
    static readonly ENTER_KEY: 'Enter';
    static readonly HELP_ICON = "Help Icon";
    static readonly MANAGEMENT_CONSOLE_LINK = "Management Console Link";
}
