# Reusable authentication subflow to execute login steps
# Parameters required: USERNAME, PASSWORD
appId: ${APP_ID}
---
- runFlow: ../common/dismiss_popups.yaml
- tapOn: "Company Id"
- inputText: ${USERNAME}
- runFlow: ../common/dismiss_popups.yaml
- tapOn: "Password"
- inputText: ${PASSWORD}
- hideKeyboard
- runFlow: ../common/dismiss_popups.yaml
- tapOn: "LOGIN"
- assertVisible: "Dashboard"
